--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/logo.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- 修改 viewport 以禁止移动端缩放 -->
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
+  <meta name="description" content="Binance Alpha Tool" />
+  <meta name="keywords" content="Binance Alpha Tool,Binance Alpha Dog,Alpha Points">
   <title>Binance Alpha Tool</title>
 </head>
 
